<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/add_back_btn"
            android:layout_width="62dp"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_back_btn"
            android:scaleType="fitCenter"
            android:backgroundTint="@color/white"
            />
    </LinearLayout>
    <ImageView
        android:id="@+id/iconImg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_add_contact"
        android:scaleType="fitCenter"/>
    <TextView
        android:id="@+id/access_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_contact"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="5dp"
        android:background="#FEE052"/>
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/contactName"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"
            android:layout_marginVertical="10dp"
            />

        <EditText
            android:id="@+id/firstNameInput"
            android:paddingVertical="2dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/nameValInput1"
            android:textColorHint="@color/hintColor"
            android:paddingStart="100dp"
            android:paddingEnd="0dp"
            android:textSize="15sp"
            android:textColor="@color/mycolor"
            android:background="@drawable/edit_text_border"
            android:inputType="textPersonName"
            />
        <EditText
            android:id="@+id/lastNameInput"
            android:paddingVertical="2dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/nameValInput2"
            android:textColorHint="@color/hintColor"
            android:paddingStart="100dp"
            android:paddingEnd="0dp"
            android:textSize="15sp"
            android:textColor="@color/mycolor"
            android:background="@drawable/edit_text_border"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"

            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/phoneNb"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"
            android:layout_marginVertical="10dp"
            />
        <EditText
            android:id="@+id/numberInput"
            android:paddingVertical="2dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/numberValInput"
            android:textColorHint="@color/hintColor"
            android:paddingStart="100dp"
            android:paddingEnd="0dp"
            android:textSize="15sp"
            android:textColor="@color/mycolor"
            android:background="@drawable/edit_text_border"
            android:inputType="phone"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/email"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"
            android:layout_marginVertical="10dp"
            />
        <EditText
            android:id="@+id/emailInput"
            android:paddingVertical="2dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/emailValInput"
            android:textColorHint="@color/hintColor"
            android:paddingStart="100dp"
            android:paddingEnd="0dp"
            android:textSize="15sp"
            android:textColor="@color/mycolor"
            android:background="@drawable/edit_text_border"
            android:inputType="textEmailAddress"
            />

    </LinearLayout>

    <ImageButton
        android:backgroundTint="@color/white"
        android:id="@+id/saveContactBtn"
        android:layout_width="84dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_save_btn"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"/>

</androidx.appcompat.widget.LinearLayoutCompat>