<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/info_back_btn"
            android:layout_width="62dp"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_back_btn"
            android:scaleType="fitCenter"
            android:backgroundTint="@color/white"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_contact_img"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_inf"
        android:textSize="30sp"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="5dp"
        android:background="#FEE052"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/contactName"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"
            android:layout_marginVertical="10dp"
            />
        <TextView
            android:id="@+id/namePreview"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/nameVal"
            android:paddingStart="100dp"
            android:paddingEnd="0dp"
            android:textSize="15sp"
            android:textColor="@color/mycolor"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/phoneNb"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"
            android:layout_marginVertical="10dp"
            />
        <TextView
            android:id="@+id/nbPreview"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingStart="100dp"
            android:paddingEnd="0dp"
            android:text="@string/numberVal"
            android:textSize="15sp"
            android:textColor="@color/mycolor"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/email"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"
            android:layout_marginVertical="10dp"
            />
        <TextView
            android:id="@+id/emailPreview"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingStart="100dp"
            android:paddingEnd="0dp"
            android:text="@string/emailVal"
            android:textSize="15sp"
            android:textColor="@color/mycolor"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"

        android:gravity="center_horizontal">
        <ImageButton
            android:id="@+id/telephone_btn"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_telephone"
            android:scaleType="centerCrop"
            android:backgroundTint="@color/white"/>
        <ImageButton
            android:id="@+id/edit_btn"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_edit"
            android:scaleType="centerCrop"
            android:backgroundTint="@color/white"/>

        <ImageButton
            android:id="@+id/delete_btn"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_trash"
            android:scaleType="centerCrop"
            android:backgroundTint="@color/white"/>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>